@@ -3,6 +3,8 @@
   Improvements
   * #32482: PDF Controller suggests to install Fonts
   * #32513: typeNum print template is configurable by the TypoScript constant editor
+  * #32516: Systemcheck should check fonts in directory of pdfcontroller_fonts
+
 
   Bugfixes
   * #31191: Missing folders temp and out. Thanks to Borries Jensen
